+ test configuration when forking